syntax = "proto3";

package fdbctl;

service ControlService {
}
